--- a/index.html
+++ b/index.html
@@ -14,16 +14,24 @@
       <div class="logo">🌟 NOVA</div>
       <a class="btn ghost" href="plan.html">Plans</a>
     </div>
-    <div class="card">
-      <h1 class="title">Welcome to Nova</h1>
-      <p class="subtitle">I’ll help you discover your purpose, map your strengths, and bridge into real roles with Navi.</p>
-      <div class="footer">
-        <button id="start" class="btn primary">Start → Choose Categories</button>
-        <a href="categories.html" class="btn">Skip intro</a>
+
+    <div class="card hero">
+      <h1>WELCOME TO NOVA</h1>
+      <p class="subtitle">
+        I’ll help you <strong>discover your purpose</strong> — then turn it into strengths, direction, and next steps.
+      </p>
+
+      <div class="pillline">89% of people do not know their purpose.</div>
+      <div class="pillline">Flow: choose categories → pick traits → see roles that express your purpose.</div>
+      <div class="pillline">Reflection matters: capture what resonates so your next steps align with calling.</div>
+
+      <div class="cta">
+        <button id="start" class="btn primary">Start → Choose My Categories</button>
       </div>
     </div>
+
     <hr>
-    <div class="small">v8.3 • Categories → Traits → Reflections → Results → Plan • Stable baseline + matching</div>
+    <div class="small">v8.3c • Categories → Traits → Reflections → Results → Plan • Stable baseline + matching</div>
   </div>
   <script src="assets/js/app.js"></script>
 </body>
