--- a/reflections.html
+++ b/reflections.html
@@ -14,9 +14,13 @@
       <a class="btn ghost" href="traits.html">Back</a>
     </div>
     <div class="card">
-      <h2 class="title">Tell me where you are</h2>
-      <p class="subtitle">Choose one — it helps me frame results and next steps.</p>
+      <h2 class="title">Tell me where you are on your journey</h2>
+      <p class="subtitle">This is your pause point. Look back at the categories and traits you chose. It’s okay to include things you’ve done before, even if you’re not doing them now. Every experience is part of your story — and the fuller your picture, the better Nova can guide you.</p>
       <div id="reflections" class="grid cols-3"></div>
+      <div id="switching-extra" class="hidden" style="margin-top:12px">
+        <label for="switching-from">What career are you switching from?</label>
+        <input id="switching-from" type="text" placeholder="e.g., Teaching, Retail, IT Support">
+      </div>
       <p id="ref-note" class="small" style="margin-top:10px"></p>
       <div class="footer">
         <a class="btn" href="traits.html">Previous</a>
