--- a/results.html
+++ b/results.html
@@ -14,8 +14,8 @@
       <a class="btn ghost" href="reflections.html">Back</a>
     </div>
     <div class="card">
-      <h2 class="title">Your matches</h2>
-      <p class="subtitle">Roles shown meet at least a <strong>30%</strong> trait match. Higher % means closer alignment.</p>
+      <h2 class="title">Your Reveal</h2>
+      <p class="subtitle">This is your makeover moment. Nova looked at your traits and surfaced roles where your strengths can shine. Fit labels tell you how naturally each role aligns — and Navi will help you step into it.</p>
       <div id="results" class="grid cols-2"></div>
       <div class="footer">
         <a class="btn" href="reflections.html">Previous</a>
