--- a/categories.html
+++ b/categories.html
@@ -15,7 +15,7 @@
     </div>
     <div class="card">
       <h2 class="title">Choose your focus areas</h2>
-      <p class="subtitle">Select one or more categories. Your trait list adapts to the categories you choose.</p>
+      <p class="subtitle" style="font-size:1.05rem">Select one or more categories. Each one expands the traits you’ll see next — with plain-English definitions to help you choose confidently.</p>
       <div id="category-grid" class="grid cols-3" style="margin-top:12px"></div>
       <div class="footer">
         <button id="reset" class="btn">Reset</button>
