--- a/traits.html
+++ b/traits.html
@@ -15,12 +15,13 @@
     </div>
     <div class="card">
       <h2 class="title">Select your traits <span class="small">(up to 12)</span></h2>
-      <p class="subtitle">We’ve filtered the list based on your categories. Chosen: <strong id="trait-count">0</strong></p>
+      <p class="subtitle" style="font-size:1.05rem">Tap traits that sound like you. Each one includes a quick explanation so you don’t have to guess what it means.</p>
       <div id="trait-grid" class="grid cols-3" style="margin-top:12px"></div>
       <div class="footer">
         <a class="btn" href="categories.html">Previous</a>
         <button id="to-reflections" class="btn primary">Continue → Reflections</button>
       </div>
+      <div class="small" style="margin-top:6px">Chosen: <strong id="trait-count">0</strong></div>
     </div>
   </div>
   <script src="assets/js/app.js"></script>
