--- a/index.html
+++ b/index.html
@@ -17,21 +17,19 @@
 
     <div class="card hero">
       <h1>WELCOME TO NOVA</h1>
-      <p class="subtitle">
-        I’ll help you <strong>discover your purpose</strong> — then turn it into strengths, direction, and next steps.
-      </p>
+      <p class="subtitle">I’ll help you <strong>discover your purpose</strong> — then turn it into strengths, direction, and next steps.</p>
 
       <div class="pillline">89% of people do not know their purpose.</div>
       <div class="pillline">Flow: choose categories → pick traits → see roles that express your purpose.</div>
       <div class="pillline">Reflection matters: capture what resonates so your next steps align with calling.</div>
 
-      <div class="cta">
-        <button id="start" class="btn primary">Start → Choose My Categories</button>
+      <div class="footer" style="justify-content:center">
+        <button id="start" class="btn primary" style="font-size:1.05rem;padding:16px 22px">Start → Choose My Categories</button>
       </div>
     </div>
 
     <hr>
-    <div class="small">v8.3c • Categories → Traits → Reflections → Results → Plan • Stable baseline + matching</div>
+    <div class="small">v8.3h • Categories → Traits → Reflections → Results → Plan • Stable baseline + matching</div>
   </div>
   <script src="assets/js/app.js"></script>
 </body>
