--- a/results.html
+++ b/results.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Results • NOVA</title>
+  <title>Your Reveal • NOVA</title>
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body data-page="results">
