--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
       <div class="pillline">Reflection matters: capture what resonates so your next steps align with calling.</div>
 
       <div class="footer" style="justify-content:center">
-        <button id="start" class="btn primary" style="font-size:1.05rem;padding:16px 22px">Start → Choose My Categories</button>
+        <a id="start" class="btn primary" href="categories.html">Start → Choose My Categories</a>
       </div>
     </div>
 
     <hr>
-    <div class="small">v8.3h • Categories → Traits → Reflections → Results → Plan • Stable baseline + matching</div>
+    <div class="small">v8.3j • Categories → Traits → Reflections → Results → Plan • Self-contained with embedded fallbacks</div>
   </div>
   <script src="assets/js/app.js"></script>
 </body>
