--- a/results.html
+++ b/results.html
@@ -16,6 +16,14 @@
     <div class="card">
       <h2 class="title">Your Reveal</h2>
       <p class="subtitle">This is your makeover moment. Nova looked at your traits and surfaced roles where your strengths can shine. Fit labels tell you how naturally each role aligns — and Navi will help you step into it.</p>
+      <div class="card" style="margin:12px 0;">
+        <div class="kpis">
+          <div class="kpi"><div class="num" id="kpi-cats">0</div><div class="cap">Focus areas</div></div>
+          <div class="kpi"><div class="num" id="kpi-traits">0</div><div class="cap">Traits selected</div></div>
+          <div class="kpi"><div class="num" id="kpi-path">—</div><div class="cap">Journey</div></div>
+        </div>
+        <p class="small" style="margin-top:8px">This snapshot helps you see where you are now and where Nova is taking you next.</p>
+      </div>
       <div id="results" class="grid cols-2"></div>
       <div class="footer">
         <a class="btn" href="reflections.html">Previous</a>
