--- a/categories.html
+++ b/categories.html
@@ -1,28 +1,23 @@
-
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Choose Categories • NOVA</title>
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>NOVA — Categories</title>
+    <link rel="stylesheet" href="/assets/css/style.css" />
+    <script defer src="/assets/js/app.js"></script>
+    <script type="text/javascript" src="https://payhip.com/payhip.js"></script>
 </head>
-<body data-page="categories">
-  <div class="container step">
-    <div class="header">
-      <div class="logo">🌟 NOVA</div>
-      <a class="btn ghost" href="index.html">Back</a>
-    </div>
-    <div class="card">
-      <h2 class="title">Choose your focus areas</h2>
-      <p class="subtitle" style="font-size:1.05rem">Select one or more categories. Each one expands the traits you’ll see next — with plain-English definitions to help you choose confidently.</p>
-      <div id="category-grid" class="grid cols-3" style="margin-top:12px"></div>
-      <div class="footer">
-        <button id="reset" class="btn">Reset</button>
-        <button id="to-traits" class="btn primary">Continue → Traits</button>
+  <body data-page="categories">
+    <div class="container">
+      <div class="header"><h1>Select Your Categories</h1></div>
+      <div id="categories-grid" class="grid">
+        <div class="skeleton"></div><div class="skeleton"></div><div class="skeleton"></div>
+      </div>
+      <div class="footer-nav">
+        <a href="/index.html"><button class="secondary">Back</button></a>
+        <button class="primary" onclick="proceedToTraits()">Continue</button>
       </div>
     </div>
-  </div>
-  <script src="assets/js/app.js"></script>
-</body>
+  </body>
 </html>
