--- a/index.html
+++ b/index.html
@@ -31,9 +31,26 @@
       </div>
 
       <div class="hero">
-        <h1>I’ll help you discover your purpose — then turn it into strengths, direction, and next steps.</h1>
+      <div class="hero">
+        <h2 style="margin-top:0;margin-bottom:10px;font-size:34px;line-height:1.15;font-weight:800;">
+          89% of people do not know their purpose.
+        </h2>
 
-        <div class="pill">89% of people do not know their purpose.</div>
+        <h1 style="margin-top:0;font-size:32px;line-height:1.25;">
+          I’ll help you discover your purpose — then turn it into strengths, direction, and next steps.
+        </h1>
+
+        <div class="pill">Flow: choose categories → pick traits → see roles that express your purpose.</div>
+        <div class="pill">Reflection matters: capture what resonates so your next steps align with calling.</div>
+
+        <div class="cta">
+          <a href="/categories.html"><button class="primary">Start → Choose My Categories</button></a>
+          <div class="tiny">
+            <button class="play-link" onclick="(function(){var a=document.getElementById('intro-audio'); if(a){a.play();}})()">▶ Play Welcome</button>
+          </div>
+        </div>
+      </div>
+</div>
         <div class="pill">Flow: choose categories → pick traits → see roles that express your purpose.</div>
         <div class="pill">Reflection matters: capture what resonates so your next steps align with calling.</div>
 
