--- a/index.html
+++ b/index.html
@@ -1,87 +1,66 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Nova — Welcome</title>
-    <link rel="stylesheet" href="/assets/css/style.css" />
-    <script defer src="/assets/js/app.js"></script>
-    <script type="text/javascript" src="https://payhip.com/payhip.js"></script>
-    <style>
-      /* Small, page-specific tweaks for warm clarity */
-      .hero { max-width: 860px; margin: 10vh auto 0; padding: 28px; border-radius: 16px;
-              background: rgba(17,26,45,.32); border: 1px solid rgba(255,255,255,.12); text-align:center; }
-      .hero h1 { font-size: 40px; line-height: 1.1; margin: 0 0 12px 0; }
-      .hero p.lead { font-size: 18px; opacity: .95; margin: 0 0 18px 0; }
-      .pill { display:inline-block; margin: 8px 0; padding: 10px 14px; border-radius: 999px;
-              border: 1px solid rgba(255,255,255,.24); background: rgba(255,255,255,.06); }
-      .tiny { font-size: 14px; opacity: .95; margin-top: 10px; }
-      .cta .primary { font-size: 18px; padding: 14px 22px; }
-      .play-link { background: transparent; border: 0; text-decoration: underline; font-size: 14px; }
-      .header .right { display:flex; gap:10px; }
-    </style>
-  </head>
-  <body data-page="welcome">
-    <div class="container">
-      <div class="header">
-        <h1 style="margin:0">Welcome to Nova</h1>
-        <div class="right">
-          <button class="secondary" onclick="openPin()">Enter PIN</button>
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Nova • Welcome</title>
+  <link rel="stylesheet" href="/assets/css/style.css"/>
+  <script defer src="/assets/js/state.js"></script>
+</head>
+<body>
+  <div class="container">
+    <div class="header">
+      <div class="brand">Nova</div>
+      <div class="tag">v8.4 • Ready</div>
+    </div>
+
+    <div class="card">
+      <div class="kicker">Welcome</div>
+      <h1 class="h1">Find your lane with clarity.</h1>
+      <p class="p"><strong>89%</strong> of people say they want a clearer sense of purpose for their work and life — Nova helps you name it, then Navi helps you act on it.</p>
+
+      <div class="grid cols-2" style="margin-top:12px">
+        <div class="card" style="background:transparent;border:1px dashed var(--line)">
+          <div class="kicker">Quick Access</div>
+          <label class="small">Username</label>
+          <input id="user" class="input" placeholder="e.g. drew" />
+          <div style="height:8px"></div>
+          <label class="small">PIN</label>
+          <input id="pin" class="input" placeholder="4–6 digits" maxlength="6"/>
+          <div style="height:14px"></div>
+          <button class="btn primary block" id="btnStart">Start • Choose My Categories</button>
+          <div style="height:6px"></div>
+          <button class="btn ghost block" id="btnResume">Resume where I left off</button>
+          <div class="small" style="margin-top:10px">Your PIN saves progress locally on this device.</div>
         </div>
-      </div>
-
-      <div class="hero">
-      <div class="hero">
-        <h2 style="margin-top:0;margin-bottom:10px;font-size:34px;line-height:1.15;font-weight:800;">
-          89% of people do not know their purpose.
-        </h2>
-
-        <h1 style="margin-top:0;font-size:32px;line-height:1.25;">
-          I’ll help you discover your purpose — then turn it into strengths, direction, and next steps.
-        </h1>
-
-        <div class="pill">Flow: choose categories → pick traits → see roles that express your purpose.</div>
-        <div class="pill">Reflection matters: capture what resonates so your next steps align with calling.</div>
-
-        <div class="cta">
-          <a href="/categories.html"><button class="primary">Start → Choose My Categories</button></a>
-          <div class="tiny">
-            <button class="play-link" onclick="(function(){var a=document.getElementById('intro-audio'); if(a){a.play();}})()">▶ Play Welcome</button>
-          </div>
-        </div>
-      </div>
-</div>
-        <div class="pill">Flow: choose categories → pick traits → see roles that express your purpose.</div>
-        <div class="pill">Reflection matters: capture what resonates so your next steps align with calling.</div>
-
-        <div class="cta">
-          <a href="/categories.html"><button class="primary">Start → Choose My Categories</button></a>
-          <div class="tiny">
-            <button class="play-link" onclick="(function(){var a=document.getElementById('intro-audio'); if(a){a.play();}})()">▶ Play Welcome</button>
+        <div>
+          <div class="kicker">How it works</div>
+          <ul class="p">
+            <li>Pick a few <strong>categories</strong> that call to you.</li>
+            <li>Select <strong>traits</strong> that feel true.</li>
+            <li>See <strong>matches</strong> and next steps.</li>
+            <li>Bridge to <strong>Navi</strong> for resume, plan, and opportunities.</li>
+          </ul>
+          <div class="list">
+            <span class="pill">Clarity</span><span class="pill">Focus</span><span class="pill">Action</span><span class="pill">Momentum</span>
           </div>
         </div>
       </div>
     </div>
 
-    <!-- Hidden audio only (no player bar) -->
-    <audio id="intro-audio" style="display:none">
-      <source src="/assets/audio/intro.mp3" type="audio/mpeg">
-      <source src="/assets/audio/intro.wav" type="audio/wav">
-    </audio>
+    <div class="footer">© Nova & Navi</div>
+  </div>
 
-    <!-- PIN Modal (generic, single location accessible via header button) -->
-    <div id="pin-backdrop" class="modal-backdrop">
-      <div class="modal">
-        <h2 id="pin-title">Enter PIN</h2>
-        <p id="pin-subtitle" class="small">For returning users</p>
-        <div class="row">
-          <input type="password" id="pin" inputmode="numeric" placeholder="Enter PIN" aria-label="Enter PIN" />
-        </div>
-        <div class="row" style="justify-content:flex-end">
-          <button class="ghost" onclick="(function(){localStorage.removeItem('signedIn'); closePin();})()">Cancel</button>
-          <button class="primary" onclick="(function(){var v=document.getElementById('pin').value||''; if(v.length>=4){localStorage.setItem('signedIn','true');} closePin();})()">Continue</button>
-        </div>
-      </div>
-    </div>
-  </body>
+<script>
+  document.getElementById('btnStart').addEventListener('click', ()=>{
+    NOVA.state.user = document.getElementById('user').value.trim();
+    NOVA.state.pin  = document.getElementById('pin').value.trim();
+    NOVA.save();
+    location.href = '/categories.html';
+  });
+  document.getElementById('btnResume').addEventListener('click', ()=>{
+    location.href = '/categories.html';
+  });
+</script>
+</body>
 </html>
