--- a/plans.html
+++ b/plans.html
@@ -1,39 +1,60 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>NOVA — Plans</title>
-    <link rel="stylesheet" href="/assets/css/style.css" />
-    <script defer src="/assets/js/app.js"></script>
-    <script type="text/javascript" src="https://payhip.com/payhip.js"></script>
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Nova • Plans</title>
+  <link rel="stylesheet" href="/assets/css/style.css"/>
+  <script defer src="/assets/js/state.js"></script>
 </head>
-  <body data-page="plans">
-    <div class="container">
-      <div class="header"><h1>Choose Your Plan</h1></div>
-      <div class="grid">
-        <div id="plan-purpose" class="card">
-          <h3 class="plan-title">How to Know Your Purpose — $14.99</h3>
-          <a href="https://payhip.com/b/N7Lvg" class="payhip-buy-button" data-theme="green" data-product="N7Lvg">Buy Now</a>
-        </div>
-
-        <div id="plan-starter" class="card">
-          <h3 class="plan-title">Starter — $29.99/mo</h3>
-          <div class="row"><button class="primary" onclick="setPlanTier('starter')">Buy Now</button></div>
-        </div>
-        <div id="plan-pro" class="card">
-          <h3 class="plan-title">Pro — $99/mo</h3>
-          <div class="row"><button class="primary" onclick="setPlanTier('pro')">Buy Now</button></div>
-        </div>
-        <div id="plan-mastery" class="card">
-          <h3 class="plan-title">Mastery — $149/mo</h3>
-          <div class="row"><button class="primary" onclick="setPlanTier('mastery')">Buy Now</button></div>
-        </div>
-      </div>
-      <div class="footer-nav">
-        <a href="/reflection.html"><button class="secondary">Back</button></a>
-        <button class="primary" onclick="goToNavi()">Launch Your Next Step →</button>
-      </div>
-    </div>
-  </body>
+<body>
+<div class="container">
+  <div class="header">
+    <div class="brand">Nova</div>
+    <div class="list"><a class="pill" href="/reflection.html">Back</a></div>
+    <div class="badge">Payhip</div>
+  </div>
+  <div class="card">
+    <h1 class="h1">Choose your plan</h1>
+    <div id="plans" class="grid cols-3"></div>
+    <div class="hr"></div>
+    <a class="btn primary" href="/navi.html">Continue to Navi</a>
+  </div>
+</div>
+<script>
+async function loadConfig(){
+  try{
+    const r = await fetch('/assets/config.json', {cache:'no-store'});
+    return await r.json();
+  }catch(e){
+    return {payhip:{starter:'#',pro:'#',mastery:'#'}};
+  }
+}
+(async ()=>{
+  const cfg = await loadConfig();
+  const plans = [
+    {id:'starter', name:'NAVI Starter', price:'$29.99/mo', url: cfg.payhip.starter},
+    {id:'pro', name:'NAVI Pro', price:'$99/mo', url: cfg.payhip.pro},
+    {id:'mastery', name:'Mastery', price:'$149.99/mo', url: cfg.payhip.mastery}
+  ];
+  const root = document.getElementById('plans');
+  plans.forEach(p=>{
+    const el = document.createElement('div');
+    el.className='card';
+    el.innerHTML = `<div class="kicker">${p.price}</div><div class="h2">${p.name}</div>
+      <p class="p">Everything you need to move from clarity to action.</p>
+      <div class="grid"><a class="btn block" href="${p.url}" target="_blank">Buy on Payhip</a>
+      <button class="btn ghost block" data-id="${p.id}">Select Plan</button></div>`;
+    root.appendChild(el);
+  });
+  root.addEventListener('click', e=>{
+    const btn = e.target.closest('button[data-id]');
+    if(!btn) return;
+    NOVA.state.plan = btn.dataset.id;
+    NOVA.save();
+    alert('Selected plan: '+NOVA.state.plan.toUpperCase());
+  });
+})();
+</script>
+</body>
 </html>
