--- a/reflection.html
+++ b/reflection.html
@@ -1,26 +1,39 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>NOVA — Reflection</title>
-    <link rel="stylesheet" href="/assets/css/style.css" />
-    <script defer src="/assets/js/app.js"></script>
-    <script type="text/javascript" src="https://payhip.com/payhip.js"></script>
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Nova • Reflection</title>
+  <link rel="stylesheet" href="/assets/css/style.css"/>
+  <script defer src="/assets/js/state.js"></script>
 </head>
-  <body data-page="reflection">
-    <div class="container">
-      <div class="header"><h1>Choose Your Journey</h1></div>
-      <div class="grid">
-        <div class="journey-card card" data-journey="starting"><strong>Starting Career</strong><p class="small">Launching your first path</p></div>
-        <div class="journey-card card" data-journey="switching"><strong>Switching</strong><p class="small">Changing fields with intention</p></div>
-        <div class="journey-card card" data-journey="leveling"><strong>Leveling Up</strong><p class="small">Advancing to the next tier</p></div>
-        <div class="journey-card card" data-journey="reentering"><strong>Re‑Entering</strong><p class="small">Returning with new focus</p></div>
-      </div>
-      <div class="footer-nav">
-        <a href="/results.html"><button class="secondary">Back</button></a>
-        <a href="/plans.html"><button class="primary">See Plans</button></a>
-      </div>
+<body>
+<div class="container">
+  <div class="header">
+    <div class="brand">Nova</div>
+    <div class="list"><a class="pill" href="/results.html">Back to Results</a></div>
+    <div class="badge">Bridge step</div>
+  </div>
+  <div class="card">
+    <h1 class="h1">Which moment are you in?</h1>
+    <div class="grid cols-2">
+      <button class="btn ghost" onclick="setRef('starting')"><div><div><strong>Starting a career</strong></div><div class="small">First steps, first wins.</div></div></button>
+      <button class="btn ghost" onclick="setRef('switching')"><div><div><strong>Switching careers</strong></div><div class="small">Pivot with purpose.</div></div></button>
+      <button class="btn ghost" onclick="setRef('leveling')"><div><div><strong>Leveling up</strong></div><div class="small">Advance with focus.</div></div></button>
+      <button class="btn ghost" onclick="setRef('restarting')"><div><div><strong>Restarting</strong></div><div class="small">New season, fresh grace.</div></div></button>
     </div>
-  </body>
+    <div class="hr"></div>
+    <button class="btn primary" onclick="goPlans()">Next • Choose Plan</button>
+  </div>
+</div>
+<script>
+  function setRef(stage){
+    NOVA.state.reflection = stage;
+    NOVA.save();
+    document.querySelectorAll('.btn.ghost').forEach(b=> b.style.borderColor='var(--line)');
+    event.currentTarget.style.borderColor='var(--accent)';
+  }
+  function goPlans(){ location.href='/plans.html'; }
+</script>
+</body>
 </html>
